# ML-Project

./: .gitignore  AdamMaytoussi.pptx  AdamMaytoussi.url  Makefile  Project.md  README.md  REPOSITORY.md  requirements.txt
configs/: experiment.json
overlap_asr_llm/: .gitignore  CONTRIBUTIONS.md  README.md  REPOSITORY.md  pyproject.toml  requirements.txt
overlap_asr_llm/configs/: all_pipelines.json  base.json  diarization_asr.json  diarization_faster_whisper.json  diarization_faster_whisper_samples2.json  direct_asr.json  experiment.json  mock.json  separation_asr.json  speaker_llm_pipeline.json
overlap_asr_llm/data/configs/: experiment.json
overlap_asr_llm/data/samples/: reference.txt
overlap_asr_llm/docs/: CORE_CODE_LINE_BY_LINE_CN.md  EXPERIMENT_DESIGN.md  QUALITATIVE_FINDINGS.md  QUICK_START_FOR_TEAM_CN.md  REFERENCE_TRANSCRIPTION_CN.md  TRUE_READABILITY_SCORE.md  VIDEO_SCRIPT.md
overlap_asr_llm/outputs/: qualitative_review_template.csv  results.csv  results.json  run_summary.md
overlap_asr_llm/outputs/all_pipelines/: diarization_segments.csv  diarization_segments.json  readability_results.csv  readability_results.json  readability_summary.md  results.csv  results.json  run_summary.html  run_summary.md  separation_segments.csv  separation_segments.json
overlap_asr_llm/scripts/: compare_asr_models.py  launch_speaker_app.py  package_submission.py  smoke_test.py
overlap_asr_llm/src/: cli.py  config.py  metrics.py  pipelines.py  providers.py
overlap_asr_llm/tests/: test_metrics.py  test_rag.py  test_readability.py  test_runner.py  test_speaker_app.py
(+39 files in other folders)
